feat(core): add social identity
